[package]
name = "jolt-sys"
version = "0.1.0"
edition = "2021"
description = "Build the Jolt physics library."
homepage = "https://github.com/All8Up/jolt-sys"
repository = "https://github.com/All8Up/jolt-sys"
license = "MIT"
readme = "README.md"
links = "Jolt"

[dependencies]

[build-dependencies]
cmake = { version = "0.1.48" }

[features]
default = []
