[package]
name = "jolt-sys"
version = "0.1.3"
edition = "2021"
description = "Build the Jolt physics library."
homepage = "https://github.com/All8Up/jolt-sys"
repository = "https://github.com/All8Up/jolt-sys"
license = "MIT"
readme = "README.md"
links = "jolt-wrapper"

[dependencies]

[build-dependencies]
cmake = { version = "0.1.48" }
bindgen = "0.59.2"
normpath = "0.3"

[features]
default = []
